CloudConsulting/force-app/main/default/objects/Project_Line_Item__c/Project_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Project Line Item</label>
    <nameField>
        <label>Project Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>