CloudConsulting/force-app/main/default/objects/Project_Line_Item__c/fields/HoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>HoursAllocated__c</fullName>
    <label>HoursAllocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>