CloudConsulting/force-app/main/default/objects/Project_Line_Item__c/fields/HoursPending__c.field-meta.xml
<CustomField>
    <fullName>HoursPending__c</fullName>
    <formula>HoursPerRole__c -  HoursAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HoursPending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>