CloudConsulting/force-app/main/default/objects/Project_Line_Item__c/fields/TaskHoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursAllocated__c</fullName>
    <label>TaskHoursAllocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>