CloudConsulting/force-app/main/default/objects/Project_Line_Item__c/fields/TaskHoursPending__c.field-meta.xml
<CustomField>
    <fullName>TaskHoursPending__c</fullName>
    <formula>HoursPerRole__c -  TaskHoursAllocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TaskHoursPending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>